<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_fuel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Date" />


        <EditText android:id="@+id/edit_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_date" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Station"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Station"/>

        <EditText
            android:id="@+id/edit_station"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_station" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/odometerReading"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Odometer"/>
        
        <EditText
            android:id="@+id/edit_odometer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_odometer"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelGrade"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Fuel Grade"/>

        <EditText
            android:id="@+id/edit_grade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_grade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelAmount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Fuel Amount"/>

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_amount"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fuelCost"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Fuel Cost"/>

        <EditText
            android:id="@+id/edit_cost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_cost"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/save"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/save"/>

        <Button
            android:id="@+id/view"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/view"/>
    </LinearLayout>

</LinearLayout>